scraped over 100 opportunities + added helpful comments

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 ServiceAccountKey.json
+Dataset_Large.csv
+Dataset_Medium.csv
+Dataset_Small.csv
+Opportunities_Large.json
+Opportunities_Medium.json
+Opportunities_Small.json
